Fix baseUrl
