# web/documentation/swagger.json
@@ -5,7 +5,7 @@
         "version": "0.1"
     },
     "paths": {
-        "/web/v1/auth/login": {
+        "/v1/auth/login": {
             "post": {
                 "tags": [
                     "Auth"
@@ -42,7 +42,7 @@
                 }
             }
         },
-        "/web/v1/posts": {
+        "/v1/posts": {
             "get": {
                 "tags": [
                     "Post"
@@ -66,7 +66,7 @@
                 ]
             }
         },
-        "/web/v1/posts/{id}": {
+        "/v1/posts/{id}": {
             "get": {
                 "tags": [
                     "Post"
@@ -195,7 +195,7 @@
                 ]
             }
         },
-        "/web/v1/user": {
+        "/v1/user": {
             "get": {
                 "tags": [
                     "User"
@@ -250,7 +250,7 @@
                 }
             }
         },
-        "/web/v1/user/{id}": {
+        "/v1/user/{id}": {
             "get": {
                 "tags": [
                     "User"
